--- a/index2.html
+++ b/index2.html
@@ -48,9 +48,9 @@
                   <img class="card-img-bottom" 
                       src="img/grrbnbcapture.PNG" alt="grrbnb project image">
                   <div class="card-body">
-                    <h5 class="card-title">GrrBnb Project</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit quaerat, animi dolor vel similique, id provident.</p>
-                    <a href="https://osor0024.github.io/grrbnb/" class="card-link">Know more</a>
+                    <h5 class="card-title">GrrBnb App</h5>
+                    <p class="card-text">GrrBnb is a responsive web page built for. Users enter the location, date, the abige and the numbers of dogs... where i applied basic knowledge </p>
+                    <a href="https://osor0024.github.io/grrbnb/" class="card-link">Open app site</a>
                   </div>
                 </div>
             </div>
@@ -59,8 +59,11 @@
                   <img class="card-img-bottom" 
                       src="./img/lottocapture.PNG" alt="lotto project image">
                   <div class="card-body">
-                    <h5 class="card-title">Lotto Numbers</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit quaerat, animi dolor vel similique, id provident.</p>
+                    <h5 class="card-title">Ajax Lotto</h5>
+                    <p class="card-text ">This proyect consist in web app able to generates randoms number in a certain range and a certain amount, all this values are set by the user<span class="text-truncate">
+                        at the principle screen.
+                    </span> 
+                    </p>
                    <a href="https://osor0024.github.io/lotto_assignment/" class="card-link">Know more</a>
                   </div>
                 </div>
