--- a/index3.html
+++ b/index3.html
@@ -12,9 +12,12 @@
 </head>
 
 <body>
-    <header class="mainbar tres">
+    <header class="mainbar tres shadow mb-5">
         <nav class="navbar navbar-expand-sm navbar-dark">
-            <a class="navbar-brand" href="#">Natalia Osorio Cueto</a>
+              <a class="navbar-brand" href="index.html">
+                <span class="try">
+                    <img src="logomio_dZ1_icon.ico" />
+                </span>atalia Osorio Cueto</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -60,11 +63,12 @@
             </div>
     
             <div class="form-group">
-                <label for="exampleFormControlTextarea1">Example textarea</label>
+                <label for="exampleFormControlTextarea1">Tell me more about you</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
-            <input type="submit" class="btn btn-info" value="Submit Button">
-            
+            <div class="d-flex flex-row-reverse">
+            <input type="submit" class="btn btn-info px-5 my-5" value="Submit">
+            </div>
         </form>
     </div>
 
