--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <div class="p-3 row third">
             <h3 class="col-12 p-4 text-center section03">Bootstrap</h3>
-            <p class="col-4"><img class="bootsrapt col-12" src="/svg/bootstrap-4.svg" alt="css logo" /></p>
+            <p class="col-4"><img class="bootsrapt col-12" src="./svg/bootstrap-4.svg" alt="bootstrap logo" /></p>
             <p class=col-8> Bootstrap is a Framework. With this tool i'm able to design responsive webpages easy and fast.I can also include to my web page simple feuteres that require JS, as tooltips, modal windows, alerts. </p>
 
         </div>
@@ -123,8 +123,6 @@
             <div class="container">
                 <p class="text-center">Please follow my work !</p>
                 <div class="bottom-footer">
-
-                   
 
                         <div class=" col-12 p-2 mx-auto">
     
