--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<header class="mainbar dos shadow">
+<header class="mainbar dos shadow mb-5">
         <nav class="navbar navbar-expand-sm navbar-dark">
               <a class="navbar-brand" href="index.html">
                 <span class="try">
