--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
 
 
-        <div class="container row pt-5">
-            <div class="col-lg-4 col-md-4">
-            <img class="col-lg-12 col-md-12 rounded-circle" src="img/me.jpg" />
-            </div>
-            <div class="col-lg-8 col-md-8">
-                <h2 class="col-lg-8 col-md-8 text-white p-5">Hola, I'm Natalia Osorio Cueto</h2>
+        <div class="container pt-5">
+            
+            <img class="imgme rounded-circle mx-auto d-block" src="img/me.jpg" />
+            
+            <div class="col-lg-12 col-md-12">
+                <h2 class="col-lg-8 col-md-8 text-white p-5 mx-auto">Hola, I'm <span class="nat">Natalia Osorio Cueto</span></h2>
             </div>
             <!--<p class="align-self-end">hol </p>-->
             <div class="scroll-down"></div>
