--- a/index2.html
+++ b/index2.html
@@ -48,19 +48,19 @@
 
  <div class="container my-3">  
         <div class="row">    
-            <div class="col-sm-6 col-md-4 pb-3">  
-                <div class="card shadow rounded">
+            <div class="col-sm-6 col-md-4 pb-3 d-flex">  
+                <div class="card shadow rounded flex-fill">
                   <img class="card-img-bottom" 
                       src="img/grrbnbcapture.PNG" alt="grrbnb project image">
                   <div class="card-body">
                     <h5 class="card-title">GrrBnb App</h5>
-                    <p class="card-text">GrrBnb is a responsive web page built for. Users enter the location, date, the abige and the numbers of dogs... where i applied basic knowledge </p>
+                    <p class="card-text">GrrBnb is a responsive web page. Users enter the location, date and the numbers of dogs.In this project i applied basic knowledge on CSS</p>
                     <a href="https://osor0024.github.io/grrbnb/" class="card-link">Open app site</a>
                   </div>
                 </div>
             </div>
-             <div class="col-sm-6 col-md-4 pb-3">  
-                <div class="card shadow rounded">
+             <div class="col-sm-6 col-md-4 pb-3 d-flex">  
+                <div class="card shadow rounded flex-fill">
                   <img class="card-img-bottom" 
                      src="./img/responsivecapture.PNG" alt="responsive project image">
                   <div class="card-body">
@@ -70,27 +70,26 @@
                   </div>
                 </div>
             </div>
-          <div class="col-sm-6 col-md-4 pb-3">  
-                <div class="card shadow rounded">
+          <div class="col-sm-6 col-md-4 pb-3 d-flex">  
+                <div class="card shadow rounded flex-fill">
                   <img class="card-img-bottom" 
                       src="img/movieapp.png" alt="movie project image">
                   <div class="card-body">
                     <h5 class="card-title">Movie App</h5>
-                    <p class="card-text">The movie recomendation app allows the user to search for movies or Tv shows.The user also will be able to recive recomendation based on the user's selection.</p>
+                    <p class="card-text">The movie recommendation app allows the user to search for movies or Tv shows.The user also will be able to receive recommendation based on the user's selection.</p>
                      <a href="https://osor0024.github.io/api_project/" class="card-link">Open app site </a>
                   </div>
                 </div>
             </div>
            
-            <div class="col-sm-6 col-md-4 pb-3">  
-                <div class="card shadow rounded">
+            <div class="col-sm-6 col-md-4 pb-3 d-flex">  
+                <div class="card shadow rounded flex-fill">
                   <img class="card-img-bottom" 
                       src="./img/lottocapture.PNG" alt="lotto project image">
                   <div class="card-body">
                     <h5 class="card-title">Ajax Lotto</h5>
-                    <p class="card-text ">This proyect consist in web app able to generates randoms number in a certain range and a certain amount, all this values are set by the user at the principle screen.
-                    </p>
-                   <a href="https://osor0024.github.io/lotto_assignment/" class="card-link">Open app site</a>
+                    <p class="card-text ">This project consist in a web app able to generate random number in a certain range and a certain amount, all this values are set by the user at the principle screen.</p>
+                <a href="https://osor0024.github.io/lotto_assignment/" class="card-link">Open app site</a>
                   </div>
                 </div>
             </div>
