--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <header class="mainbar h-70 shadow ">
+    <header class="mainbar shadow ">
 
         <nav class="navbar navbar-expand-sm navbar-dark shadow">
 
