--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/main.css" />
+    <meta name="viewport" content="width=device-width, height=device-height">
 </head>
 
 <body>
