Fixed background for mobile

--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body>
+<body class="body2">
 <header class="mainbar dos shadow mb-5">
         <nav class="navbar navbar-expand-sm navbar-dark">
               <a class="navbar-brand" href="index.html">
