Added first cordova projects

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 
         <nav class="navbar navbar-expand-sm navbar-dark shadow">
 
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="home.html">
                 <span class="try">
                     <img src="logomio_dZ1_icon.ico" />
                 </span>atalia Osorio Cueto</a>
@@ -31,10 +31,10 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html"><i class="fas fa-home p-1"></i>Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="home.html"><i class="fas fa-home p-1"></i>Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index2.html"><i class="fas fa-user p-1"></i>Portfolio</a>
+                        <a class="nav-link" href="portfolio.html"><i class="fas fa-user p-1"></i>Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index3.html"><i class="far fa-comments p-1"></i>Contact</a>
@@ -45,12 +45,7 @@
         </nav>
 
 
-
-
         <!--        <img class="photo p-5 align-self-center" src="./img/logomio.png" />-->
-
-
-
 
 
         <div class="container pt-5">
@@ -68,8 +63,6 @@
     </header>
 
     <div class="container-fluid">
-
-
 
 
 
@@ -128,12 +121,11 @@
                         <div class=" col-12 p-2 mx-auto">
     
                             <i class="fab fa-facebook-square text-white m-2"></i>
+                            <i class="fab fa-github text-white m-2"></i>
                             <i class="fab fa-twitter-square text-white m-2"></i>
                             <i class="fab fa-instagram text-white m-2"></i>
 
                         </div>
-
-                    
 
                 </div>
                 <p class="solo">
