--- a/index3.html
+++ b/index3.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="css/main.css" />
 </head>
 
-<body>
+<body class="body2">
     <header class="mainbar tres shadow mb-5">
         <nav class="navbar navbar-expand-sm navbar-dark">
-              <a class="navbar-brand" href="index.html">
+              <a class="navbar-brand" href="home.html">
                 <span class="try">
                     <img src="logomio_dZ1_icon.ico" />
                 </span>atalia Osorio Cueto</a>
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html"><i class="fas fa-home p-1"></i>Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="home.html"><i class="fas fa-home p-1"></i>Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index2.html"><i class="fas fa-user p-1"></i>Portfolio</a>
+                        <a class="nav-link" href="portfolio.html"><i class="fas fa-user p-1"></i>Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index3.html"><i class="far fa-comments p-1"></i>Contact</a>
@@ -37,6 +37,10 @@
             
             </div>
         </nav>
+        <div class="align-self-center pt-5" >
+           <h1 class="text-center h1-portf p-5" >Hire me</h1> 
+        </div>
+        
     </header>
     <div class="container mt-5">
         <form>
