added al the pictures for the apps

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
                  <div class="col-sm-6 col-md-4 pb-3 d-flex">  
                     <div class="card shadow rounded flex-fill">
                       <img class="card-img-bottom" 
-                          src="img/movieapp.png" alt="movie project image">
+                          src="img/comingSoonP.png" alt="movie project image">
                       <div class="card-body">
                         <h5 class="card-title">Reviewr App</h5>
                         <p class="card-text">This Cordova Android App will allow the user to take pictures and review them.</p>
@@ -74,7 +74,7 @@
                 <div class="col-sm-6 col-md-4 pb-3 d-flex">  
                         <div class="card shadow rounded flex-fill">
                           <img class="card-img-bottom" 
-                              src="img/playr-photo.png" alt="movie project image">
+                              src="img/playrApp.png" alt="movie project image">
                           <div class="card-body">
                             <h5 class="card-title">Playr App</h5>
                             <p class="card-text">This Cordova audio player Android App will show a playlist of audio files that will reproduce every-time the user clicks on it or the audio reaches the end to go to the next audio.</p>
@@ -85,7 +85,7 @@
                     <div class="col-sm-6 col-md-4 pb-3 d-flex">  
                             <div class="card shadow rounded flex-fill">
                               <img class="card-img-bottom" 
-                                  src="img/movieapp.png" alt="movie project image">
+                                  src="img/comingSoonP.png" alt="movie project image">
                               <div class="card-body">
                                 <h5 class="card-title">Findr App</h5>
                                 <p class="card-text"> This Cordova iOS App shows a map where the user can add markers and information at their chosen point on the map.</p>
@@ -96,7 +96,7 @@
                         <div class="col-sm-6 col-md-4 pb-3 d-flex">  
                                 <div class="card shadow rounded flex-fill">
                                   <img class="card-img-bottom" 
-                                      src="img/movieapp.png" alt="movie project image">
+                                      src="img/comingSoonP.png" alt="movie project image">
                                   <div class="card-body">
                                     <h5 class="card-title">Remembrall App</h5>
                                     <p class="card-text">This Cordova iOS App will show a list of saved dates by the user. And for each date will pop up a local notification one week before to remind the user.</p>
@@ -107,7 +107,7 @@
                             <div class="col-sm-6 col-md-4 pb-3 d-flex">  
                                     <div class="card shadow rounded flex-fill">
                                       <img class="card-img-bottom" 
-                                          src="img/thumbed-photo.png" alt="movie project image">
+                                          src="img/thumbdApp.png" alt="movie project image">
                                       <div class="card-body">
                                         <h5 class="card-title">Thumbed App</h5>
                                         <p class="card-text">
