--- a/home.html
+++ b/home.html
@@ -5,9 +5,7 @@
     <meta charset="UTF-8">
     <title>Natalia Osorio Cueto</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" href="css/main.css" />
 <!--     <meta name="viewport" content="width=device-width, height=device-height"> -->
@@ -120,10 +118,10 @@
 
                         <div class=" col-12 p-2 mx-auto">
     
-                            <i class="fab fa-facebook-square text-white m-2"></i>
+                            <!-- <i class="fab fa-facebook-square text-white m-2"></i> -->
                             <i class="fab fa-github text-white m-2"></i>
-                            <i class="fab fa-twitter-square text-white m-2"></i>
-                            <i class="fab fa-instagram text-white m-2"></i>
+                            <!-- <i class="fab fa-twitter-square text-white m-2"></i> -->
+                            <i class="fab fa-linkedin text-white m-2"></i>
 
                         </div>
 
