Added target = _blank to open links in a new tab

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Movie App</h5>
                         <p class="card-text">The movie recommendation app allows the user to search for movies or Tv shows.The user also will be able to receive recommendation based on the user's selection.</p>
-                         <a href="https://osor0024.github.io/api_project/" class="card-link">Open app site </a>
+                         <a href="https://osor0024.github.io/api_project/" class="card-link" target="_blank">Open app site </a>
                       </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Reviewr App</h5>
                         <p class="card-text">This Cordova Android App will allow the user to take pictures and review them.</p>
-                         <a href="https://github.com/osor0024/reviewr" class="card-link">Open app site </a>
+                         <a href="https://github.com/osor0024/reviewr" class="card-link" target="_blank">Open app site </a>
                       </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Playr App</h5>
                             <p class="card-text">This Cordova audio player Android App will show a playlist of audio files that will reproduce every-time the user clicks on it or the audio reaches the end to go to the next audio.</p>
-                             <a href="https://github.com/osor0024/playr" class="card-link">Open app site </a>
+                             <a href="https://github.com/osor0024/playr" class="card-link" target="_blank">Open app site </a>
                           </div>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                               <div class="card-body">
                                 <h5 class="card-title">Findr App</h5>
                                 <p class="card-text"> This Cordova iOS App shows a map where the user can add markers and information at their chosen point on the map.</p>
-                                 <a href="https://github.com/osor0024/findr" class="card-link">Open app site </a>
+                                 <a href="https://github.com/osor0024/findr" class="card-link" target="_blank">Open app site </a>
                               </div>
                             </div>
                         </div>
@@ -100,7 +100,7 @@
                                   <div class="card-body">
                                     <h5 class="card-title">Remembrall App</h5>
                                     <p class="card-text">This Cordova iOS App will show a list of saved dates by the user. And for each date will pop up a local notification one week before to remind the user.</p>
-                                     <a href="https://github.com/osor0024/rememberall" class="card-link">Open app site </a>
+                                     <a href="https://github.com/osor0024/rememberall" class="card-link" target="_blank">Open app site </a>
                                   </div>
                                 </div>
                             </div>
@@ -112,7 +112,7 @@
                                         <h5 class="card-title">Thumbed App</h5>
                                         <p class="card-text">
                                                 This Cordova app allows the user to record a video and generate a image from 4 thumbnails from the video.</p>
-                                         <a href="https://github.com/osor0024/thumbed" class="card-link">Open app site </a>
+                                         <a href="https://github.com/osor0024/thumbed" class="card-link" target="_blank">Open app site </a>
                                       </div>
                                     </div>
                                 </div>
@@ -131,7 +131,7 @@
                   <div class="card-body">
                     <h5 class="card-title">GrrBnb App</h5>
                     <p class="card-text">GrrBnb is a responsive web page. Users enter the location, date and the numbers of dogs.In this project i applied basic knowledge on CSS</p>
-                    <a href="https://osor0024.github.io/grrbnb/" class="card-link">Open app site</a>
+                    <a href="https://osor0024.github.io/grrbnb/" class="card-link" target="_blank">Open app site</a>
                   </div>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Responsive Webpage</h5>
                     <p class="card-text"> Sketch webpage where are applied the next concepts: Flexbox, @media queries, spacing, alignment, Contrast...</p>
-                     <a href="https://mad9013.github.io/responsive-website-project1-osor0024/" class="card-link">Open app site</a> 
+                     <a href="https://mad9013.github.io/responsive-website-project1-osor0024/" class="card-link" target="_blank">Open app site</a> 
                   </div>
                 </div>
             </div>
@@ -154,7 +154,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Ajax Lotto</h5>
                     <p class="card-text ">This project consist in a web app able to generate random number in a certain range and a certain amount, all this values are set by the user at the principle screen.</p>
-                <a href="https://osor0024.github.io/lotto_assignment/" class="card-link">Open app site</a>
+                <a href="https://osor0024.github.io/lotto_assignment/" class="card-link" target="_blank">Open app site</a>
                   </div>
                 </div>
             </div>
