--- a/home.html
+++ b/home.html
@@ -119,9 +119,9 @@
                         <div class=" col-12 p-2 mx-auto">
     
                             <!-- <i class="fab fa-facebook-square text-white m-2"></i> -->
-                            <i class="fab fa-github text-white m-2"></i>
+                            <i class="fab fa-github text-white m-2" target="_blank"></i>
                             <!-- <i class="fab fa-twitter-square text-white m-2"></i> -->
-                            <i class="fab fa-linkedin text-white m-2"></i>
+                            <i class="fab fa-linkedin text-white m-2" target="_blank"></i>
 
                         </div>
 
