added tools use

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 </div>
                             <div class="col-6 col-md-4"> 
                                 <p class="col-4">
-                                    <img class="col-12" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" />
+                                    <img class="col-12" src="./svg/css3.svg" alt="htm logo " class="img-fluid" />
                                    </p>
                                    <p class="col-8">CSS</p>
                                 </div>
@@ -98,9 +98,9 @@
                                  <p class="col-4">
                                      <img class="col-12" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" />
                                    </p>
-                                   <p class="col-8">HTML</p>
+                                   <p class="col-8">SASS</p>
                                 </div>
-                            <div class="col-6 col-md-4">
+                            <!-- <div class="col-6 col-md-4">
                                     <p class="col-4">
                                     <img class="col-12" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" />
                                     </p>
@@ -111,7 +111,7 @@
                                             <img class="col-12" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" />
                                            </p>
                                            <p class="col-8">HTML</p>
-                            </div>
+                            </div> -->
 
                         </div>
             </div>
@@ -124,8 +124,24 @@
         <div class="p-3 row second" id="section02">
             <h3 class="col-12 p-4 text-center">Tools I use:</h3>
 
-            <p class="col-8"></p>
-            <p class="col-4"> <img class="col-12" src="./svg/javascript-2.svg" alt="JavaScript logo" /></p>
+            <!-- <p class="col-8"></p>
+            <p class="col-4"> <img class="col-12" src="./svg/javascript-2.svg" alt="JavaScript logo" /></p> -->
+
+
+
+            <p class="col-6 col-md-4">GitHub</p>
+            <p class="col-6 col-md-4">Bootstrap</p>
+            <p class="col-6 col-md-4">Cordova</p>
+            <p class="col-6 col-md-4">Photoshop</p>
+            <p class="col-6 col-md-4">Illustrator</p>
+            <p class="col-6 col-md-4">Adobe XD</p>
+            <p class="col-6 col-md-4">Codepen</p>
+            <p class="col-6 col-md-4">Brackets</p>
+            <p class="col-6 col-md-4">Atom</p>
+            <p class="col-6 col-md-4">VS Code</p>
+            <p class="col-6 col-md-4">MS office - Word, PowerPoint, Excel</p>
+            <p class="col-6 col-md-4">XCode</p>
+            <p class="col-6 col-md-4">Android Studio</p>
 
         </div>
 
