--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body class="body2">
 <header class="mainbar dos shadow mb-5">
         <nav class="navbar navbar-expand-sm navbar-dark">
-              <a class="navbar-brand" href="home.html">
+              <a class="navbar-brand" href="index.html">
                 <span class="try">
                     <img src="logomio_dZ1_icon.ico" />
                 </span>atalia Osorio Cueto</a>
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="home.html"><i class="fas fa-home p-1"></i>Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html"><i class="fas fa-home p-1"></i>Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html"><i class="fas fa-user p-1"></i>Portfolio</a>
