fixed section01-02 background color

--- a/index.html
+++ b/index.html
@@ -78,25 +78,25 @@
                     <div class="row">
                             <div class="col-6 col-md-4"> 
                                 <p class="col-4">
-                                 <img class="col-12" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" />
+                                 <img class="lang-img" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" />
                                 </p>
                                 <p class="col-8">HTML</p>
                             </div>
                             <div class="col-6 col-md-4"> 
                                 <p class="col-4">
-                                    <img class="col-12" src="./svg/javascript-2.svg" alt="htm logo " class="img-fluid" />
+                                    <img class="lang-img" src="./svg/javascript-2.svg" alt="htm logo " class="img-fluid" />
                                    </p>
                                    <p class="col-8">JS</p>
                                 </div>
                             <div class="col-6 col-md-4"> 
                                 <p class="col-4">
-                                    <img class="col-12" src="./svg/css3.svg" alt="htm logo " class="img-fluid" />
+                                    <img class="lang-img" src="./svg/css3.svg" alt="htm logo " class="img-fluid" />
                                    </p>
                                    <p class="col-8">CSS</p>
                                 </div>
                             <div class="col-6 col-md-4">
                                  <p class="col-4">
-                                     <img class="col-12" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" />
+                                     <img class="lang-img" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" />
                                    </p>
                                    <p class="col-8">SASS</p>
                                 </div>
@@ -104,13 +104,13 @@
                                     <p class="col-4">
                                     <img class="col-12" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" />
                                     </p>
-                                <p class="col-8">HTML</p>
+                                <p class="col-8">C++</p>
                             </div>
                             <div class="col-6 col-md-4">
                                     <p class="col-4">
                                             <img class="col-12" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" />
                                            </p>
-                                           <p class="col-8">HTML</p>
+                                           <p class="col-8">Python</p>
                             </div> -->
 
                         </div>
@@ -127,21 +127,24 @@
             <!-- <p class="col-8"></p>
             <p class="col-4"> <img class="col-12" src="./svg/javascript-2.svg" alt="JavaScript logo" /></p> -->
 
+            <div class="container">
 
-
-            <p class="col-6 col-md-4">GitHub</p>
-            <p class="col-6 col-md-4">Bootstrap</p>
-            <p class="col-6 col-md-4">Cordova</p>
-            <p class="col-6 col-md-4">Photoshop</p>
-            <p class="col-6 col-md-4">Illustrator</p>
-            <p class="col-6 col-md-4">Adobe XD</p>
-            <p class="col-6 col-md-4">Codepen</p>
-            <p class="col-6 col-md-4">Brackets</p>
-            <p class="col-6 col-md-4">Atom</p>
-            <p class="col-6 col-md-4">VS Code</p>
-            <p class="col-6 col-md-4">MS office - Word, PowerPoint, Excel</p>
-            <p class="col-6 col-md-4">XCode</p>
-            <p class="col-6 col-md-4">Android Studio</p>
+                    <div class="row">
+                    <p class="col-6 col-md-4 ptool">GitHub</p>
+                    <p class="col-6 col-md-4 ptool">Bootstrap 4</p>
+                    <p class="col-6 col-md-4 ptool">Cordova</p>
+                    <p class="col-6 col-md-4 ptool">Photoshop</p>
+                    <p class="col-6 col-md-4 ptool">Illustrator</p>
+                    <p class="col-6 col-md-4 ptool">Adobe XD</p>
+                    <p class="col-6 col-md-4 ptool">Codepen</p>
+                    <p class="col-6 col-md-4 ptool">Brackets</p>
+                    <p class="col-6 col-md-4 ptool">Atom</p>
+                    <p class="col-6 col-md-4 ptool">VS Code</p>
+                    <p class="col-6 col-md-4 ptool">MS office - Word, PowerPoint, Excel</p>
+                    <p class="col-6 col-md-4 ptool">XCode</p>
+                    <p class="col-6 col-md-4 ptool">Android Studio</p>
+            </div>
+            </div>
 
         </div>
 
