added corrects fonts

--- a/index.html
+++ b/index.html
@@ -75,28 +75,30 @@
             <h3 class="col-12 p-4 text-center">Languages I speak:</h3>
 
             <div class="container my-3">
-                    <div class="row">
+                    <div class="row justify-content-center">
                             <div class="col-6 col-md-4"> 
                                 <p class="col-4">
-                                 <img class="lang-img" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" />
-                                </p>
+                                 <!-- <img class="lang-img" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" /> -->
+                                 <i class="fab fa-html5 lang-img"></i>                                </p>
                                 <p class="col-8">HTML</p>
                             </div>
                             <div class="col-6 col-md-4"> 
                                 <p class="col-4">
-                                    <img class="lang-img" src="./svg/javascript-2.svg" alt="htm logo " class="img-fluid" />
-                                   </p>
+                                    <!-- <img class="lang-img" src="./svg/javascript-2.svg" alt="htm logo " class="img-fluid" /> -->
+                                    <i class="fab fa-js-square lang-img"></i>                                </p>
                                    <p class="col-8">JS</p>
                                 </div>
                             <div class="col-6 col-md-4"> 
                                 <p class="col-4">
-                                    <img class="lang-img" src="./svg/css3.svg" alt="htm logo " class="img-fluid" />
+                                    <!-- <img class="lang-img" src="./svg/css3.svg" alt="htm logo " class="img-fluid" /> -->
+                                    <i class="fab fa-css3-alt lang-img"></i>
                                    </p>
                                    <p class="col-8">CSS</p>
                                 </div>
                             <div class="col-6 col-md-4">
                                  <p class="col-4">
-                                     <img class="lang-img" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" />
+                                     <!-- <img class="lang-img" src="./svg/html5-2.svg" alt="htm logo " class="img-fluid" /> -->
+                                     <i class="fab fa-sass lang-img"></i>
                                    </p>
                                    <p class="col-8">SASS</p>
                                 </div>
@@ -129,7 +131,7 @@
 
             <div class="container">
 
-                    <div class="row">
+                    <div class="row justify-content-center ">
                     <p class="col-6 col-md-4 ptool">GitHub</p>
                     <p class="col-6 col-md-4 ptool">Bootstrap 4</p>
                     <p class="col-6 col-md-4 ptool">Cordova</p>
