--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Reviewr App</h5>
                         <p class="card-text">This Cordova Android App will allow the user to take pictures and review them.</p>
-                         <a href="https://github.com/osor0024/reviewr" class="card-link" target="_blank">Open app site </a>
+                         <a href="https://github.com/osor0024/reviewr" class="card-link" target="_blank">Open app code </a>
                       </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                           <div class="card-body">
                             <h5 class="card-title">Playr App</h5>
                             <p class="card-text">This Cordova audio player Android App will show a playlist of audio files that will reproduce every-time the user clicks on it or the audio reaches the end to go to the next audio.</p>
-                             <a href="https://github.com/osor0024/playr" class="card-link" target="_blank">Open app site </a>
+                             <a href="https://github.com/osor0024/playr" class="card-link" target="_blank">Open app code </a>
                           </div>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                               <div class="card-body">
                                 <h5 class="card-title">Findr App</h5>
                                 <p class="card-text"> This Cordova iOS App shows a map where the user can add markers and information at their chosen point on the map.</p>
-                                 <a href="https://github.com/osor0024/findr" class="card-link" target="_blank">Open app site </a>
+                                 <a href="https://github.com/osor0024/findr" class="card-link" target="_blank">Open app code </a>
                               </div>
                             </div>
                         </div>
@@ -100,7 +100,7 @@
                                   <div class="card-body">
                                     <h5 class="card-title">Remembrall App</h5>
                                     <p class="card-text">This Cordova iOS App will show a list of saved dates by the user. And for each date will pop up a local notification one week before to remind the user.</p>
-                                     <a href="https://github.com/osor0024/rememberall" class="card-link" target="_blank">Open app site </a>
+                                     <a href="https://github.com/osor0024/rememberall" class="card-link" target="_blank">Open app code </a>
                                   </div>
                                 </div>
                             </div>
@@ -112,7 +112,7 @@
                                         <h5 class="card-title">Thumbed App</h5>
                                         <p class="card-text">
                                                 This Cordova app allows the user to record a video and generate a image from 4 thumbnails from the video.</p>
-                                         <a href="https://github.com/osor0024/thumbed" class="card-link" target="_blank">Open app site </a>
+                                         <a href="https://github.com/osor0024/thumbed" class="card-link" target="_blank">Open app code </a>
                                       </div>
                                     </div>
                                 </div>
